# projects

CMAKE_EXAMPLE/: CMakeLists.txt  main.cpp
CMAKE_EXAMPLE/lib/: CMakeLists.txt  mylib.cpp  mylib.h
GreatLearning_Projects/M01-P02-Source-Code/src/: Node.py  VirtualNodeMap.py
GreatLearning_Projects/Weather-Data/config/: devices.csv
GreatLearning_Projects/Weather-Data/src/: database.py  main.py  model.py  setup.py
IOT Processing in AWS/: AggregateModel.py  AlertDataModel.py  DataBase.py  RawDataModel.py  main.py  ruleengine.py  rules.json
IOT Processing in AWS/Documents/: Healthcare IoT Processing in Cloud.docx
